// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Has default desktop styles (defaultOpen) 1`] = `
.c3 {
  height: 1rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.875rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 32px;
  padding: var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.4rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.4rem;
  position: absolute;
  top: -1px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.4rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 1rem;
  left: 0;
  margin-bottom: -1rem;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
  position: absolute;
  top: 1px;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.7rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
  left: 6px;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: 0;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.4em;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.4em;
  left: 3px;
  top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<Tooltip
  defaultOpen={true}
  label="Test Content"
>
  <styled.span
    data-testid="tooltip"
    id="tooltip-trigger-undefined"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-undefined"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#60666E"
        name="info"
        size="16"
      >
        <svg
          color="#60666E"
          focusable={false}
          height="16"
          width="16"
        />
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={false}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    isMobile={false}
    role="tooltip"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    visible={true}
  >
    <div
      aria-hidden={false}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            Object {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      Test Content
    </div>
  </styled.div>
</Tooltip>
`;

exports[`Tooltip Has default desktop styles 1`] = `
.c3 {
  height: 1rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #000000;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.875rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 32px;
  padding: var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.4rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.4rem;
  position: absolute;
  top: -1px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.4rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 1rem;
  left: 0;
  margin-bottom: -1rem;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
  position: absolute;
  top: 1px;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.7rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
  left: 6px;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: 0;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.4em;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.4em;
  left: 3px;
  top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<Tooltip
  label="Test Content"
>
  <styled.span
    data-testid="tooltip"
    id="tooltip-trigger-undefined"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-undefined"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#60666E"
        name="info"
        size="16"
      >
        <svg
          color="#60666E"
          focusable={false}
          height="16"
          width="16"
        />
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={true}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    isMobile={false}
    role="tooltip"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    visible={false}
  >
    <div
      aria-hidden={true}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            Object {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      Test Content
    </div>
  </styled.div>
</Tooltip>
`;

exports[`Tooltip Has mobile styles (defaultOpen) 1`] = `
.c3 {
  height: 1rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0;
  max-width: 327px;
  min-height: 72px;
  padding: var(--spacing-3x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.4rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.4rem;
  position: absolute;
  top: -1px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.4rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 1rem;
  left: 0;
  margin-bottom: -1rem;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
  position: absolute;
  top: 1px;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.7rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
  left: 6px;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: 0;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.4em;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.4em;
  left: 3px;
  top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<Tooltip
  defaultOpen={true}
  label="Test Content"
>
  <styled.span
    data-testid="tooltip"
    id="tooltip-trigger-undefined"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-undefined"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#60666E"
        name="info"
        size="24"
      >
        <svg
          color="#60666E"
          focusable={false}
          height="24"
          width="24"
        />
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={false}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    isMobile={true}
    role="tooltip"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    visible={true}
  >
    <div
      aria-hidden={false}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            Object {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      Test Content
    </div>
  </styled.div>
</Tooltip>
`;

exports[`Tooltip Has mobile styles 1`] = `
.c3 {
  height: 1rem;
  position: absolute;
  width: 1rem;
}

.c3::before {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c3::after {
  border-style: solid;
  content: "";
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c1 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #000000;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0;
  max-width: 327px;
  min-height: 72px;
  padding: var(--spacing-3x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c1[data-popper-placement*="bottom"] > .c2 {
  height: 1rem;
  left: 0;
  margin-top: -0.4rem;
  top: 0;
  width: 1rem;
}

.c1[data-popper-placement*="bottom"] > .c2::before {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.4rem;
  position: absolute;
  top: -1px;
}

.c1[data-popper-placement*="bottom"] > .c2::after {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.4rem;
}

.c1[data-popper-placement*="top"] > .c2 {
  bottom: 0;
  height: 1rem;
  left: 0;
  margin-bottom: -1rem;
  width: 1rem;
}

.c1[data-popper-placement*="top"] > .c2::before {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
  position: absolute;
  top: 1px;
}

.c1[data-popper-placement*="top"] > .c2::after {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2 {
  height: 1rem;
  left: 0;
  margin-left: -0.7rem;
  width: 1rem;
}

.c1[data-popper-placement*="right"] > .c2::before {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
}

.c1[data-popper-placement*="right"] > .c2::after {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.4rem 0.5rem 0;
  left: 6px;
  top: 0;
}

.c1[data-popper-placement*="left"] > .c2 {
  height: 1rem;
  margin-right: -0.7rem;
  right: 0;
  width: 1rem;
}

.c1[data-popper-placement*="left"] > .c2::before {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.4em;
}

.c1[data-popper-placement*="left"] > .c2::after {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.4em;
  left: 3px;
  top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

<Tooltip
  label="Test Content"
>
  <styled.span
    data-testid="tooltip"
    id="tooltip-trigger-undefined"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      className="c0"
      data-testid="tooltip"
      id="tooltip-trigger-undefined"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={0}
    >
      <Icon
        color="#60666E"
        name="info"
        size="24"
      >
        <svg
          color="#60666E"
          focusable={false}
          height="24"
          width="24"
        />
      </Icon>
    </span>
  </styled.span>
  <styled.div
    aria-hidden={true}
    data-popper-interactive={false}
    data-testid="tooltip-content-container"
    isMobile={true}
    role="tooltip"
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
    visible={false}
  >
    <div
      aria-hidden={true}
      className="c1"
      data-popper-interactive={false}
      data-testid="tooltip-content-container"
      role="tooltip"
      style={
        Object {
          "left": "0",
          "position": "absolute",
          "top": "0",
        }
      }
    >
      <styled.div
        data-popper-arrow={true}
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <div
          className="c2 c3"
          data-popper-arrow={true}
          style={
            Object {
              "position": "absolute",
            }
          }
        />
      </styled.div>
      Test Content
    </div>
  </styled.div>
</Tooltip>
`;
